# builder-agent

./: .gitignore  CHANGELOG.md  README.md  _config.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily-agent.yml  pages.yml  pr-checks.yml
.sigchain_mirror/: mirror.json
agent/: agent.py  policies.py  tools.py
backlog/: features.yml  security_tools.yml
docs/: README.md  index.html
scripts/: generate_backlog.py  new_generate_backlog.py  open_pr.py  review_and_update_backlog.py  review_security_branches.py
src/your_package/: cli.py
tests/: test_ai_001.py  test_ai_security_003.py  test_ai_security_004.py  test_ai_security_006.py  test_ai_security_007.py  test_ai_security_008.py  test_ai_security_009.py  test_ai_security_010.py  test_ai_security_011.py  test_ai_security_012.py  test_ai_security_013.py  test_ai_security_014.py  test_ai_security_015.py  test_aisec_001.py  test_aisec_002.py  test_aisec_005.py  test_cl_002.py  test_cld_001.py  test_cloud_001.py  test_cloud_002.py  test_cloud_003.py  test_cloud_004.py  test_cloud_005.py  test_cloud_006.py  test_cloud_007.py  test_cloud_008.py  test_cloud_009.py  test_cloud_010.py  test_cloud_011.py  test_cloud_012.py  test_cloud_013.py  test_cloud_014.py  test_crypto_001.py  test_crypto_002.py  test_feat_001.py  test_forensics_001.py  test_forensics_003.py  test_forensics_004.py  test_forensics_005.py  test_forensics_006.py  (+27 more)
tools/: __init__.py
tools/ai_security/: adversarial_canary.py  aegis_llm_gateway.py  ai_model_supply_chain_auditor.py  deepfake_provenance_sentinel.py  dlp_tracer.py  (+11 more)
(+57 files in other folders)
